--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,5 +34,6 @@ rights_url: ''
 subjects:
 - !lcsh 'Horror tales'
 - !lcc 'PR'
+- GITenberg
 title: Le Horror Altissime
 url: http://www.gutenberg.org/ebooks/15949
